# gitee-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  TEST_REPORT.md  mcp_full_test.jsonl  mcp_test_input.jsonl  run_all_tests.sh  run_integration_test.sh  run_tests.sh  test_full.ps1
.github/workflows/: release.yml
docs/: DEVELOPMENT.md  TEST_STATUS.md
gitee-cli/: Cargo.toml  README.md
gitee-cli/src/: l10n.rs  main.rs
gitee-cli/src/commands/: files.rs  labels.rs  mod.rs  notifications.rs  releases.rs  users.rs
gitee-cli/src/commands/files/: handlers.rs  mod.rs
gitee-cli/src/commands/issues/: handlers.rs  mod.rs
gitee-cli/src/commands/labels/: handlers.rs  mod.rs
gitee-cli/src/commands/notifications/: handlers.rs  mod.rs
gitee-cli/src/commands/pulls/: handlers.rs  mod.rs
gitee-cli/src/commands/releases/: handlers.rs  mod.rs
gitee-cli/src/commands/repos/: handlers.rs  mod.rs
gitee-cli/src/commands/users/: handlers.rs  mod.rs
gitee-cli/src/commands/wikis/: handlers.rs  mod.rs
gitee-mcp/: Cargo.toml  LICENSE
gitee-mcp/src/: l10n.rs  lib.rs  main.rs
gitee-mcp/src/server/: mod.rs  sse.rs  stdio.rs
gitee-mcp/src/tools/: definitions.rs  dispatcher.rs  files.rs  issues.rs  labels.rs  mod.rs  notifications.rs  pulls.rs  repos.rs  users.rs  wikis.rs
gitee-rs/: Cargo.toml  README.md
gitee-rs/src/: error.rs  files.rs  lib.rs  notifications.rs  users.rs  utils.rs
gitee-rs/src/files/: mod.rs  models.rs
gitee-rs/src/issues/: mod.rs  models.rs
gitee-rs/src/labels/: mod.rs  models.rs
gitee-rs/src/notifications/: mod.rs  models.rs
gitee-rs/src/pulls/: mod.rs  models.rs
gitee-rs/src/releases/: mod.rs  models.rs
gitee-rs/src/repos/: mod.rs  models.rs
gitee-rs/src/users/: mod.rs  models.rs
gitee-rs/src/wikis/: mod.rs  models.rs
