[workspace]
members = [
    "gitee-rs",
    "gitee-cli",
    "gitee-mcp"
]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
thiserror = "1.0"
anyhow = "1.0"
serde_json = "1.0"
git2 = "0.18"
tempfile = "3.8"