[package]
name = "gitee-rs"
version = "0.9.2"
edition = "2021"
authors = ["fourthz"]
description = "A high-performance Gitee API client library for Rust."
license = "MIT"
repository = "https://github.com/zymaio/gitee-rs"
homepage = "https://github.com/zymaio/gitee-rs"
documentation = "https://docs.rs/gitee-rs"
readme = "README.md"
keywords = ["gitee", "api", "sdk", "rest"]
categories = ["api-bindings", "development-tools"]

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
git2 = { workspace = true }
tempfile = { workspace = true }